# GeminiAI_ChatBot

./: gemini.py  main.py  pyproject.toml  readme.md  requirements.txt
