[tool.poetry]
name = "geminiai-chatbot"
version = "0.1.0"
description = "A Streamlit Chat based on Gemini AI LLM"
authors = ["SP85691 <suryapratap8562@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
google = "^3.0.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
